# mandelbrot_rs

./: Cargo.toml  README.md  snapshots.py
mandelbrot_cli/: Cargo.toml
mandelbrot_cli/src/: color_schemes.rs  lib.rs  main.rs
mandelbrot_gui/: Cargo.toml
mandelbrot_gui/src/: color_schemes.rs  main.rs
